--- a/Bluestone/Views/Auth/LoginPage.xaml
+++ b/Bluestone/Views/Auth/LoginPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Bluestone.Views.LoginPage"
+             x:Class="Bluestone.Views.Auth.LoginPage"
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
         <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
