--- a/Bluestone/Views/Dashboard/NewItemPage.xaml
+++ b/Bluestone/Views/Dashboard/NewItemPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Bluestone.Views.NewItemPage"
+             x:Class="Bluestone.Views.Dashboard.NewItemPage"
              Shell.PresentationMode="ModalAnimated"
              Title="New Item"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
